src/test/resources/de/uni_luebeck/isp/tessla/core/errors/hof-arity-mismatch.tessla
def f(a: Int, b: Int) = a
def foo(g: (Int) => Int) = g(1)
out foo(f)
